--- a/app_documento/app/views/usuarios/show.html.erb
+++ b/app_documento/app/views/usuarios/show.html.erb
@@ -127,7 +127,8 @@
     <% if current_usuario.login == @usuario.login%>
     <tr>
       <td>
-         <%= image_tag("/assets/password.png", :class => "cos_icon")%>
+        <%= image_tag("/assets/password.png", :class => "cos_icon")%>
+        <!-- EJEMPLO AJAX -->
          <%=link_to 'Cambiar Contraseña', edit_password_usuarios_path, :remote => true, :id => "cambiar_contr"  %> 
       </td>
     </tr>
