--- a/app_documento/app/views/layouts/_navigation.html.erb
+++ b/app_documento/app/views/layouts/_navigation.html.erb
@@ -40,7 +40,7 @@
             <!-- Navegacion para administradores (transcriptores y/o responsables)-->
               <% if current_usuario.transcriptor and not current_usuario.responsable%>
                 <li><%= link_to "Nuevo expediente", new_producto_path %></li>
-                <li><%= link_to "Ver expediente" %></li>
+                <li><%= link_to "Ver expediente", productos_path %></li>
               <% else %>
                 <li><%= link_to  'Solicitudes pendientes', tramites_path %></li>
                 <li class="dropdown">
