Gema de estadisticas Migracion a postgres

--- a/app_documento/app/views/logproductos/index.html.erb
+++ b/app_documento/app/views/logproductos/index.html.erb
@@ -1,6 +1,7 @@
 <div class="span1"></div>
 <div class="span10">
 <h3>Registro Productos</h3>
+<%= link_to 'estadisticas', statistics_new_path %>
 <div>
   <table class="table table-striped" id="tabla_show_log_prod">
     <thead>
